# order-computer-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: classItem.h  clearscreen.hpp  intro.hpp  loading.hpp  pauseconsole.hpp
src/functionMisc/clearscreen/: clearscreen.cpp
src/functionMisc/intro/: intro.cpp
src/functionMisc/loading/: loading.cpp
src/functionMisc/pauseconsole/: pauseconsole.cpp
src/functionTugas/: addItem.cpp  displayStruk.cpp  editOrder.cpp  orderItem.cpp  removeOrder.cpp
